Configurations from Equipment.file_config copied to Configurations and all relations changed to use the new Model. All new configs are stored to Configurations and are not overwitten as it was before -> we have history records.

--- a/app/views/cmdb/devices/index.html.erb
+++ b/app/views/cmdb/devices/index.html.erb
@@ -45,7 +45,7 @@
         <td><%= d["ip"] %></td>
         <td><%= d["step"] %></td>
         <td>
-          <%= link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) unless device.file_config.nil? %>
+          <%= link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) unless device.last_configuration.nil? %>
           <%= link_to('<span class="fa fa-list-ol"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_interfaces"}) if device.device && device.device[:interfaces] %>
           <%= link_to('<span class="fa fa-tree"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_cdp"}) if device.device && device.device[:neighbors] && device.device[:neighbors][:cdp] %>
         </td>
